--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -6759,3 +6759,14 @@ button.close {
 }
 /*# sourceMappingURL=bootstrap.css.map */
 
+.red {
+    background-color: palevioletred;
+}
+
+.green {
+    background-color: lightgreen;
+}
+
+.yellow {
+    background-color: lightgoldenrodyellow;
+}
