--- a/client/views/pages/name.html
+++ b/client/views/pages/name.html
@@ -1,1 +1,5 @@
-<h3>This is name</h3>
+<h3>This is name {{name.name}}</h3>
+
+<p>Change the name in the text box below</p>
+
+<input type="text" ng-model="name.name">
