--- a/client/views/pages/color.html
+++ b/client/views/pages/color.html
@@ -1,1 +1,18 @@
 <h3>This is color</h3>
+<h4>Select color</h4>
+
+<form>
+    <label>
+        <input type="radio" value="red" name="color" ng-model="color.selected" >
+        Red
+    </label>
+     <label>
+        <input type="radio" value="yellow" name="color" ng-model="color.selected">
+        Yellow
+    </label>
+     <label>
+        <input type="radio" value="green" name="color" ng-model="color.selected">
+        Green
+    </label><br>
+  
+</form>
