--- a/client/views/pages/home.html
+++ b/client/views/pages/home.html
@@ -1,1 +1,19 @@
+<div class = "row">
+
+<div class="col-md-6">
 <h3>This is home</h3>
+<h4>Your name is: {{home.name}}</h4>
+<h4>Your favorite number is: {{home.num}}</h4>
+<h4>Your color is: {{home.color}}</h4>
+</div>
+    
+
+
+<div class="col-md-6">
+    <h3>Directions</h3>
+    <p>The home page shows the default values</p>
+    <p>You can change the default values on the other pages, the changes will be reflected on the home page</p>
+</div>
+
+</div>
+
