--- a/public/views/pages/number.html
+++ b/public/views/pages/number.html
@@ -1,1 +1,3 @@
-<h3>This is number</h3>
+<h3>This is number {{num.num}}</h3>
+<p>Change number below</p>
+<input type="number" ng-model = "num.num">
